Fix image width overflow

--- a/articles/static/style.css
+++ b/articles/static/style.css
@@ -25,7 +25,7 @@ p {
 }
 
 body img {
-    max-width: 640px;
+    max-width: 100%;
 }
 
 a {
